...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lsE-Yt-bJz" customClass="LPButton" customModule="TransitionAnimation" customModuleProvider="target">
                                <rect key="frame" x="20" y="681" width="177" height="31"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="News"/>
                                <connections>
                                    <action selector="onFirstAnimationButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cmR-mz-M13"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xEe-7D-kEZ" customClass="LPButton" customModule="TransitionAnimation" customModuleProvider="target">
                                <rect key="frame" x="217" y="681" width="177" height="31"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Gallary"/>
                                <connections>
                                    <action selector="onSecondAnimationButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JvK-NR-82p"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Nv-mX-ao0" customClass="LPButton" customModule="TransitionAnimation" customModuleProvider="target">
                                <rect key="frame" x="182" y="64" width="50" height="50"/>
...
