...
    lazy var moveToTransition = LPMoveElementsTransition()
    lazy var tileTransition = LPTileTransition()
    
    let backButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(systemName: "arrow.backward.to.line"), for: .normal)
        button.setTitle("back", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.tintColor = .white
        return button
    }()
    
    var topSafeSpace: CGFloat{
...
